cmake_minimum_required(VERSION 3.0)
set(PROJECT_NAME BSTree)
project(${PROJECT_NAME})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_definitions(-Wall -std=c++11)
set(main ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp)
set(tree ${CMAKE_CURRENT_SOURCE_DIR}/sources/tree.cpp)
add_executable(${PROJECT_NAME} ${main} ${tree})
target_link_libraries(${PROJECT_NAME})